app/assets/stylesheets/hnhiring.css.scss
$green: #18bc9c;

body {
  font-size: 1.1rem;
}

@media (min-width: 577px) {
  body {
    font-size: 1.1rem;
  }
}

@media (min-width: 769px) {
  body {
    font-size: 1.2rem;
  }
}

h1 {
  font-size: 1.7em;
}

h2 {
  font-size: 1.6em;
}

body {
  overflow-x: hidden;
}

a,
a:hover,
a:focus,
a:active,
a.active {
  outline: 0;
  color: $green;
}

.navbar {
  background: #2c3e50;
  font-family: Arial, sans-serif;
}

.navbar .navbar-header {
  width: 100%;
  padding: 5px 0;
}

.navbar .navbar-header a {
  color: white;
  text-decoration: none !important;

  &:hover {
    color: $green;
    text-decoration: underline !important;
  }
}

.navbar a:focus {
  outline: 0;
}

.navbar .navbar-nav {
  letter-spacing: 1px;
}

.navbar .navbar-nav li a:focus {
  outline: 0;
}

.navbar-default {
  border: 0;
}

.odd {
  background-color: #FBF3E9;
}

ul.comments, ul.months {
  list-style: none;
  padding: 0;
  margin-bottom: 20px;
}

li.comment {
  margin: 0;
  padding: 25px 5px 15px;
}

li.month {
  margin: 0;
  padding: 40px 0;
}

.published-at {
  margin-bottom: 8px;
}

li.comment .container {
  overflow-x: hidden;
  text-overflow: ellipsis;
}

li.comment p {
  margin-top: 15px;
  margin-bottom: 15px;
}

.comment .user a {
  text-decoration: underline;
  color: $green;
  font-weight: bold;
}

.gray {
  color: #767676;
}

nav .title {
  margin: 0;
  color: white;
  font-size: 1.2rem;
  line-height: 1.2rem;
  padding: 0.5rem 0;
}

nav .title a {
  text-decoration: none;
  color: #27B33C;
}

nav .title a:hover {
  text-decoration: underline;
}

nav .search-icon {
  font-size: 1.3rem;
  line-height: 1.3rem;
  color: white !important;
  padding: 0.6rem 0 0.4rem;
}

.left {
  float: left;
}

.right {
  float: right;
}

.hidden {
  display: none;
}

.green {
  color: $green;
}

.page-title {
  margin-top: 30px;
  color: #424242;
}

.page-title a {
  color: #424242;
}

.page-subtitle {
  @extend .gray;
  font-size: 1.1em;
}

.center {
  text-align: center;
}

.next-container {
  margin-left: auto;
  margin-right: auto;
}

a.next.btn {
  margin-top: 20px;
  margin-bottom: 40px;
  color: $green;
  border-color: $green;
  text-align: center;
  width: 100%;
  display: block;
}

a.next.btn:hover {
  background-color: #e0f2f1
}

.turbolinks-progress-bar {
  height: 5px;
  background-color: #007bff;
}

.show-all {
  margin-top: 5px;
}

